--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "dependencies": {
-    "react-icons": "^5.0.0"
-  }
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
+  },
+  "name": "notes-mern-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
