--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://Harshgaddam:GaddamHarsh@cluster0.ddd9lky.mongodb.net/Notes
+JWT_SECRET=This_is_a_secret_key
