--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "react-hot-toast": "^2.4.1",
+    "react-toastify": "^10.0.3"
   },
   "name": "notes-mern-app",
   "version": "1.0.0",
