--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "react-hot-toast": "^2.4.1",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "url": "^0.11.3"
   },
   "name": "notes-mern-app",
   "version": "1.0.0",
