--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://Harshgaddam:GaddamHarsh@cluster0.ddd9lky.mongodb.net/Notes
 JWT_SECRET=This_is_a_secret_key
+AWS_ACCESS_KEY_ID=AKIA6C5RA5SLI7RKPGFP
+AWS_SECRET_ACCESS_KEY=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
