--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "^2.1539.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "compression": "^1.7.4",
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
